--- a/Portfolio Website/CSS/style.css
+++ b/Portfolio Website/CSS/style.css
@@ -127,7 +127,7 @@ img {
   height: auto;
 }
 
-/*------------------------------------------------------------------------------------RUSEABLE CSS*/
+/*------------------------------------------------------------------------------------REUSEABLE CSS*/
 .section {padding: 2rem 0 4rem;}
 
 .section_title {
@@ -145,7 +145,7 @@ img {
 
 /*------------------------------------------------------------------------------------LAYOUT CSS*/
 .container {
-  max-width: 768px;
+  max-width: 900px;
   margin-left: var(--mb-1-5);
   margin-right: var(--mb-1-5);
 }
@@ -249,7 +249,6 @@ img {
 
 .home_content{
   grid-template-columns: .5fr 3fr;
-  padding-top: 3.5rem;
   align-items: center;
 }
 
@@ -370,7 +369,8 @@ img {
 .about_info{
   display: flex;
   justify-content: space-evenly;
-  margin-bottom: var(--mb-2-5);
+  flex-direction: row;
+  margin-bottom: var(--mb-1-5);
 }
 .about_info-title{
   font-size: var(--h2-font-size);
@@ -379,6 +379,7 @@ img {
 }
 .about_info-name{
   font-size: var(--smaller-font-size);
+  padding-bottom: 1.5rem;
 }
 .about_info-title, .about_info-name{
   display: block;
@@ -794,18 +795,18 @@ img {
 
 /*---------------------------------------------------------------------MEDIUM DEVICES*/
 @media screen and (min-width: 568px) {
+
     .home_content{
-      grid-template-columns: max-content;
+      grid-template-columns: max-content 1fr 1fr;
     }
-    .home_data{
-      grid-column: 3/1;
-    }
+
     .home_img{
       order: 1;
-      justify-self: center;
+      justify-self: initial;
     }
-    .home_social .home_social-icon{
-      grid-template-columns: repeat(2, 1fr);
+    
+    .home_social-icon{
+      grid-template-columns: repeat(1, 1fr);
     }
 }
 
@@ -832,7 +833,6 @@ img {
       padding: 0 1rem;
     }
     .nav{
-      height: calc(var(--header-height)+1.5rem);
       column-gap: 1rem;
     }
     .nav_icon, .nav_close, .nav_toggle{
@@ -852,17 +852,10 @@ img {
       row-gap: 5rem;
     }
     .home_content{
-      padding-top: 0;
       column-gap: 2rem;
     }
     .home_blob{
       width: 400px;
-    }
-    .home_scroll{
-      display: block;
-    }
-    .home_scroll-button{
-      margin-left: 3rem;
     }
     .about_container{
       column-gap: 5rem;
@@ -879,7 +872,6 @@ img {
     .about_buttons{
       justify-content: center;
     }
-    
     .services_container{
       grid-template-columns: repeat(3, 218px);
       justify-content: center;
@@ -915,7 +907,7 @@ img {
 {
     .header, .main, .footer_container{
       padding: 0;
-    }    
+    }     
     .home_blob{
       width: 500px
     }
